# cpp_sfml_testing

./: CMakeLists.txt  README.md
include/: character.hpp  config.hpp
src/: character.cpp  main.cpp
